src/css/styles.css
/* ... */
.mobile-only {
  display: none;
}
#contributors,
.case-studies-container,
.video-holder-watch-video {
  text-align: center;
  background: linear-gradient(
    var(--light-grey-greenish),
    var(--light-grey-greenish)
  );
  margin: -50px 0 !important;
  width: 100%;
  padding: 50px 20px;
}
.video-holder-watch-video h3 {
  margin-top: 0
}
.video-holder-watch-video + .video-holder-watch-video {
  margin-top: 0 !important;
}
.case-studies-container{
  padding-left:0;
}
.case-studies-wrapper{
  width: 100vw;
  overflow: scroll;
  padding-left: 5vw;
}
.case-studies h2 {
  margin: 0 0 3rem;
}
.case-studies ul {
  list-style: none;
  display: flex;
  /* flex-wrap: wrap; */
  flex-direction: row;
  width: max-content;
  gap: 2rem;
  /* justify-content: center; */
  margin: 0 auto 3rem;
  padding: 0;
}
.case-studies ul li {
  flex: 0 1 410px;
  display: flex;
  flex-direction: column;
  gap: .5rem;
  border-radius: 10px;
  border: 1px solid var(--shadow-20);
  overflow: hidden;
  background: var(--light-grey);
  max-width: 80vw;
  min-width: 380px;
}
.case-studies ul li img {
  width: 100%;
  height: 210px;
  object-fit: cover;
  object-position: top;
}
.case-studies ul li h3 {
  margin: 0;
}
.case-studies ul li p {
  margin: 0 1.5rem auto;
}
.case-studies ul li .buttons {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: .75rem;
  justify-content: space-between;
  margin: 1rem 1.5rem 1.5rem;
}
.case-studies ul li .buttons a {
  margin: 0;
  flex: 1 0 9rem;
  text-align: center;
  white-space: nowrap;
  border-radius: 5px;
  border: 1px solid var(--shadow-20);
  color: var(--black);
  font-weight: 600;
  padding: .75rem 1rem;
  transition: 0.2s ease;
}
.case-studies ul li .buttons a:hover {
  color: var(--sunkist-lime);
  border-color: var(--sunkist-lime);
}
.check-list {
  margin-left: 2rem;
  text-align: left;
  position: relative;
  display: block;
}
.check-list::before {
  content: "";
  background-image: url(/img/tick-01.svg);
  background-size: 1.5rem 1.5rem;
  background-repeat: no-repeat;
  background-position: center;
  display: inline-block;
  height: 2rem;
  width: 2rem;
  transform: translate(-2rem, -0.1rem);
  position: absolute;
  margin: auto;
  transform-origin: center;
}
.__fal-left.check-list::before {
  transform: translate(2rem, 0.1rem);
}
.__fal-left.check-list {
  margin-left: 0;
  margin-right: 2rem;
  text-align: right;
}
.promoDetails.__fal-left {
  text-align: right;
}
.__fal-left .prpmpLinkOrg .button {
  margin: 2rem auto 0 2rem;
}
.__fal-left .prpmpLinkOrg .button .fa-play-circle {
  -webkit-transform: scaleX(-1);
  transform: scaleX(-1);
}
.hero-artwork {
  max-height: 600px;
  height: 60vh;
  min-height: calc(280px*1.856 + 20px);
  position: relative;
  max-width: 860px;
  display: grid;
  grid-template-columns: 280px 1fr 3fr;
  grid-template-rows: auto;
  align-items: center;
  justify-items: center;
  width: 50vw;
}
.i-a {
  position: absolute;
  width: 90%;
  max-width: 550px;
  border-radius: 3px;
  box-shadow: 0 10px 30px var(--persistent-shadow);
  grid-column: 2/4;
  grid-row: 1/2;
  z-index: 1;
}
.i-b {
  width: 100%;
  border-radius: 10px;
  box-shadow: 0 10px 30px var(--persistent-shadow);
  position: absolute;
  max-width: 280px;
  grid-column: 1/3;
  grid-row: 1/2;
  z-index: 2;
  height: auto;
  max-height: calc(280px * 1.856);
}
.no-js-toggle-parent {
  display: grid;
  position: relative;
  grid-template-rows: 2rem 1fr;
}
.no-js-toggle {
  position: absolute;
  margin: auto;
  grid-column: 1/2;
  grid-row: 1/2;
  text-align: center;
  height: 2rem;
  width: 100%;
}
.no-js-payload {
  display: none;
  grid-column: 1/2;
  grid-row: 2/3;
}
.no-js-toggle:checked ~ .no-js-payload {
  display: block;
}
.further-quote-organiser {
  display: grid;
  position: relative;
  grid-template-rows: 2rem 1fr;
}
.further-quote-organiser .further-quote,
.further-quote-organiser span {
  position: absolute;
  margin: auto;
  grid-column: 1/2;
  grid-row: 1/2;
  text-align: center;
  height: 2rem;
  width: 100%;
}
#furtherQuote {
  display: block;
  grid-column: 1/2;
  grid-row: 2/3;
  animation: buildIn01 0.5s ease forwards 1;
}
.further-quote:checked ~ #furtherQuote {
  display: none;
}
.further-quote:checked ~ span i.fa-info-circle {
  display: block;
}
.further-quote:checked ~ span i.fa-times {
  display: none;
}
.further-quote:not(:checked) ~ span i.fa-info-circle {
  display: none;
}
.further-quote:not(:checked) ~ span i.fa-times {
  display: block;
}
.further-quote {
  padding: 0;
  margin: 0;
  opacity: 0;
  z-index: 2;
  cursor: pointer;
}
.prpmpLinkOrg .button {
  margin: 2rem 2rem auto 0;
}
.payload-no-js {
  display: none;
  position: absolute;
  right: 0;
  width: calc(65% - 40px);
  top: 0;
  left: auto;
  bottom: 0;
  margin: auto;
  grid-column: 2/3;
  grid-row: 1/2;
  padding: 20px;
}
.__fal-left > ul > li > .payload-no-js {
  right: auto;
  left: 0;
}
.features-section > ul {
  position: relative;
  margin: 50px auto 50px auto;
  width: 90vw;
  max-width: 1300px;
}
.preview-selector- {
  opacity: 0.5;
  width: 100%;
  transition: 0.2s ease;
  padding: 1.5rem calc(1rem - 5px) 1.5rem calc(1rem + 5px);
  margin: 0 auto 0 0;
  font-size: 0.9rem;
  position: relative;
  grid-column: 1/2;
  grid-row: 1/2;
}
.selector-no-js:checked ~ .preview-selector- {
  padding: 1.5rem 0 1.5rem 2.5rem;
}
.preview-selector- h3,
.preview-selector- p {
  margin: 0.2rem 0;
  padding: 0;
}
.preview-selector- h3 {
  text-transform: capitalize;
}
.selector-no-js:checked ~ .payload-no-js {
  display: grid;
  animation: buildIn01 0.5s ease forwards 1;
}
.payload-inner-aligner {
  margin: auto;
  top: 0;
  bottom: 0;
  width: 100%;
}
.payload-inner-aligner img {
  max-width: 90%;
  max-height: 90%;
}
img.n_imagery {
  width: 40vw;
  display: block;
  margin: 2rem 0;
  border-radius: 10px;
  max-width: 500px;
}
.-shad {
  box-shadow: 0 5px 15px -11px var(--shadow-50);
}
.features-section.__fal-left > ul > li {
  display: grid;
  grid-template-columns: auto 30%;
}
/* ... */

